@@ -239,6 +239,7 @@ topic.category.numtopics=There are {0} topics in category &quot;{1}&quot;
 topic.category.subcategories=Sub-categories for category &quot;{0}&quot;
 topic.category.topics=Topics in category &quot;{0}&quot;
 topic.filehistory=File History
+topic.file.download=View/Download this file
 topic.ismentionedon=is mentioned on:
 topic.notcreated=The topic "{0}" does not currently exist; it can be created by clicking on the "edit" tab above.
 topic.redirect.infinite=The topic has redirected too many times and cannot be be resolved.
