@@ -238,6 +238,7 @@ topic.category.numtopics=Es gibt {0} Artikel in Kategorie &quot;{1}&quot;
 topic.category.subcategories=Unter-Kategorien f\u00FCr Kategorie &quot;{0}&quot;
 topic.category.topics=Artikel in Kategorie &quot;{0}&quot;
 topic.filehistory=Versionen
+topic.file.download=View/Download this file
 topic.ismentionedon=wird erw\u00E4hnt auf\:
 topic.notcreated=Der Artikel "{0}" existiert zur Zeit noch nicht; Sie k\u00F6nnen ihn anlegen, in dem Sie auf den Reiter "bearbeiten" klicken.
 topic.redirect.from=Umgeleitet von {0}
