@@ -238,6 +238,7 @@ topic.category.numtopics={0} sz\u00F3cikk tal\u00E1lhat\u00F3 a(z) &quot;{1}&quo
 topic.category.subcategories=Alkateg\u00F3ri\u00E1k a(z) &quot;{0}&quot; kateg\u00F3ri\u00E1ban
 topic.category.topics=Sz\u00F3cikkek a(z) &quot;{0}&quot; kateg\u00F3ri\u00E1ban
 topic.filehistory=F\u00E1jlt\u00F6rt\u00E9net
+topic.file.download=View/Download this file
 topic.ismentionedon=eml\u00EDtve van itt\:
 topic.notcreated=A "{0}" sz\u00F3cikk m\u00E9g nem l\u00E9tezik; a fent tal\u00E1lhat\u00F3 "szerkeszt\u00E9s f\u00FClre val\u00F3 kattint\u00E1ssal hozhat\u00F3 l\u00E9tre.
 topic.redirect.from={0} sz\u00F3cikkb\u0151l \u00E1tir\u00E1ny\u00EDtva
