@@ -239,6 +239,7 @@ topic.category.numtopics=There are {0} topics in category &quot;{1}&quot;
 topic.category.subcategories=Sub-categories for category &quot;{0}&quot;
 topic.category.topics=Topics in category &quot;{0}&quot;
 topic.filehistory=\u6587\u4ef6\u5386\u53f2
+topic.file.download=View/Download this file
 topic.ismentionedon=\u88ab\u63d0\u53ca\u7684\u5730\u65b9\uff1a
 topic.notcreated=\u73b0\u5728\u8fd8\u4e0d\u5b58\u5728\u4e3b\u9898\u201c{0}\u201d\uff1b\u53ef\u4ee5\u901a\u8fc7\u70b9\u51fb\u4e0a\u9762\u7684\u201c\u7f16\u8f91\u201d\u6309\u94ae\u6765\u521b\u5efa\u3002
 topic.redirect.from=Redirected from {0}
